--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyProjectApplication"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".app.MyApp">
 
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
